@@ -1,3 +1,6 @@
+UNRELEASED
+- Support No-Op type (decoder only)
+
 0.9.0
 - C extension re-implemented (without Cython) with major speedup (7-10x)
 - object_pairs_hook now works like built-in json module
